# smarteats

./: .gitignore  .replit  README.md  SmartEats_Architecture_Diagram.md  cookies.txt  package-lock.json  package.json  pyproject.toml  replit.nix  tailwind.config.ts  theme.json  vite.config.js  vite.config.ts
attached_assets/: Pasted--before-after-tw-border-spacing-x-0-tw-border-spacing-y-0-tw-translate-x-0--1739455473844.txt  Pasted--id-44-date-2025-02-23T12-00-00-000Z-meal-name-Herb-Roasted-Chicken-and-Potatoes-macr-1740003107361.txt  Pasted-Error-Failed-to-scan-for-dependencies-from-entries-1-home-runner-workspace-client-index-htm-1739911369231.txt  Pasted-Error-Failed-to-scan-for-dependencies-from-entries-1-home-runner-workspace-client-index-htm-1740013496618.txt  Pasted-Missing-lib-format-longFormatters-specifier-in-date-fns-package-plugin-vite-dep-pre-bundle--1738637127690.txt  Pasted-The-above-error-occurred-in-the-AuthPage-component-at-AuthPage-https-b196dfc5-9c58-4e32-b-1740064538625.txt  Pasted-The-above-error-occurred-in-the-CalendarPage-component-at-CalendarPage-https-b196dfc5-9c5-1740015823093.txt  Pasted-The-above-error-occurred-in-the-Home-component-at-Home-https-b196dfc5-9c58-4e32-b69d-a883-1740082158030.txt  Pasted-The-above-error-occurred-in-the-lt-Navigation-gt-component-at-Navigation-https-b196dfc5-9-1740091767157.txt  Pasted-src-pages-planner-tsx-17-3-error-TS6133-Select-is-declared-but-its-value-is-never-read-17-S-1739138842610.txt
client/: capacitor.config.ts  index.html  jest.config.cjs  package.json  postcss.config.cjs  postcss.config.js  (+5 more)
(+66 files in other folders)
