[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smarteats"
version = "0.1.0"
authors = [
  { name = "SmartEats Team" },
]
description = "AI-powered meal planning platform"
requires-python = ">=3.11"
dependencies = [
  "openai",
  "python-dotenv",
]

[tool.pytest.ini_options]
pythonpath = ["."]
